# Zigbee-Pool-Light-Temp

./: .gitignore  1234-0000-01000001-ota-file.zigbee  CMakeLists.txt  LICENSE  README.md  index.html  manifest.json  partitions.csv  sdkconfig.defaults
docs/: index.html
external_converters/: README.md  poolLightTemp.mjs
main/: CMakeLists.txt  esp_zb_pool.c  esp_zb_pool.h  idf_component.yml  ntc.c  ntc.h  relay.c  relay.h  version.h
stl/: PoolLightTempCarrier.stl  PoolLightTempTopScrew.stl
